# redis-grpc-server

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md  build_multiplatform.sh  main.cpp  notes
.github/workflows/: cmake-multi-platform.yml
client/: CMakeLists.txt  Client.cpp  Client.h
include/: Cache.hpp  Controller.h  ControllerInterface.h  GlobalState.h  Macros.h  RedisGrpcServiceImpl.h  Registry.h  Service.h
lib/: BUILD
lib/cache/: BUILD  CMakeLists.txt  Cache.cpp  Cache.hpp  cache.hpp
lib/file_system/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
lib/logger/: CMakeLists.txt  Logger.cpp  Logger.h
lib/server/: CMakeLists.txt  Server.cpp  Server.hpp  server.hpp
proto/: redisgrpc.proto  redislite.proto
python/: redislite_client.py  redislite_pb2.py  redislite_pb2.pyi  redislite_pb2_grpc.py  setup.py
python/redislite_client.egg-info/: PKG-INFO  SOURCES.txt
src/: Cache.cpp  Controller.cpp  RedisGrpcServiceImpl.cpp  Registry.cpp  Service.cpp
tests/: CMakeLists.txt  tCache.cpp  tController.cpp  tFileSystem.cpp  tLogger.cpp
